only slider left

--- a/src/styles/blocks/currentEvents.scss
+++ b/src/styles/blocks/currentEvents.scss
@@ -9,9 +9,7 @@
     object-position: center;
     transition: transform 0.3s;
 
-    &:hover {
-      transform: scale(1.05);
-    }
+    @include hover (transform, scale(1.05));
 
     &--3 {
       margin-bottom: 0;
@@ -94,6 +92,7 @@
   &__lection {
     box-sizing: border-box;
     margin: 0 auto;
+
     padding: 24px 0 0;
     width: 280px;
     height: 140px;
@@ -103,7 +102,7 @@
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     @include onTablet {
-      margin: 0 auto -100px;
+      margin: 0 auto -40px;
       padding: 45px 55px 50px;
       width: 572px;
       height: 204px;
