--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -65,10 +65,9 @@
         height: 50px;
         color: $colorShow;
         font-size: 14px;
+        transition: 0.3s;
 
-        &:hover {
-          transform: scale(1.05);
-        }
+        @include hover (border, 2px solid gray);
 
         @include onTablet {
           width: 376px;
@@ -92,10 +91,9 @@
         height: 50px;
         background-color: #f14a27;
         cursor: pointer;
+        transition: 0.3s;
 
-        &:hover {
-          transform: scale(1.05);
-        }
+        @include hover (background-color, $colorShowData);
 
         @include onTablet {
           width: 70px;
@@ -119,28 +117,25 @@
     &--contact-address {
       color: $colorText_H2_H3;
       text-decoration: none;
+      transition: 0.3s;
 
-      &:hover {
-        font-weight: bold;
-      }
+      @include hover (border-bottom, 1px solid $colorText_H2_H3);
     }
 
     &--contact-tel {
       color: $colorText_H2_H3;
       text-decoration: none;
+      transition: 0.3s;
 
-      &:hover {
-        font-weight: bold;
-      }
+      @include hover (border-bottom, 1px solid $colorText_H2_H3);
     }
 
     &--contact-email {
       color: $colorText_H2_H3;
       text-decoration: none;
+      transition: 0.3s;
 
-      &:hover {
-        font-weight: bold;
-      }
+      @include hover (border-bottom, 1px solid $colorText_H2_H3);
     }
 
     &--schedule {
@@ -193,11 +188,15 @@
       &-gallery {
         color: $colorText_H2_H3;
         text-decoration: none;
+
+        @include hover (border-bottom, 1px solid $colorText_H2_H3);
       }
 
       &-show {
         color: $colorText_H2_H3;
         text-decoration: none;
+
+        @include hover (border-bottom, 1px solid $colorText_H2_H3);
       }
     }
 
@@ -207,11 +206,15 @@
       &-about {
         color: $colorText_H2_H3;
         text-decoration: none;
+
+        @include hover (border-bottom, 1px solid $colorText_H2_H3);
       }
 
       &-contacts {
         color: $colorText_H2_H3;
         text-decoration: none;
+
+        @include hover (border-bottom, 1px solid $colorText_H2_H3);
       }
     }
 
@@ -219,26 +222,6 @@
       margin: 0 auto;
       text-align: center;
       margin-bottom: 40px;
-
-      @include onTablet {
-        display: flex;
-        margin: 0 0 40px;
-        justify-content: space-between;
-      }
-
-      &-1 {
-        margin-bottom: 10px;
-        @include onTablet {
-          display: flex;
-          order: 1;
-        }
-      }
-
-      &-2 {
-        @include onTablet {
-          display: flex;
-        }
-      }
     }
   }
 
@@ -256,6 +239,8 @@
       width: 64px;
       height: 72px;
 
+      @include hover (transform, scale(1.05));
+
       @include onTablet {
         margin-bottom: 60px;
       }
@@ -268,11 +253,15 @@
         width: 12px;
         height: 24px;
         margin-right: 32px;
+
+        @include hover (transform, scale(1.05));
       }
 
       &-instagram {
         width: 24px;
         height: 24px;
+
+        @include hover (transform, scale(1.05));
       }
     }
   }
