--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -23,9 +23,7 @@
       }
     }
 
-    &:hover {
-      transform: scale(1.05);
-    }
+    @include hover (transform, scale(1.05));
 
     @include onTablet {
       margin-bottom: 32px;
