--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 28px;
+  transition: 0.3s;
 
   @include onTablet {
     margin: 40px 0 64px;
@@ -14,26 +15,22 @@
     margin: 40px 0 144px;
   }
 
-  &:hover {
-    transform: scale(1.1);
-  }
+  @include hover (transform, scale(1.05));
 
   &--menu {
-    &-img {
-      width: 18px;
-      height: 12px;
-      display: block;
+    width: 24px;
+    height: 24px;
+    display: block;
 
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-image: url(../images/menu.png);
-      transition: transform 0.3s;
-    }
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../images/menu.svg);
+    transition: transform 0.3s;
   }
 
   &--cross {
-    background-image: url(../images/cross.png);
+    background-image: url(../images/cross.svg);
     background-repeat: no-repeat;
     background-position: center;
   }
