--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -36,9 +36,7 @@
     text-transform: uppercase;
     transition: border-color 0.3s;
 
-    &:hover {
-      border-color: $colorText_H2_H3;
-    }
+    @include hover (border-color, $colorText_H2_H3);
   }
 
   &__call {
@@ -60,7 +58,7 @@
       border-bottom: 1px solid;
       font-size: 12px;
       line-height: 16px;
-      letter-spacing: 2px;
+      letter-spacing: 1px;
     }
   }
 }
