--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -101,6 +101,9 @@
       font-size: 14px;
       line-height: 100%;
       color: $colorShow;
+      text-decoration: none;
+
+      @include hover (color, #f14a27);
     }
 
     &--line {
@@ -137,13 +140,12 @@
       justify-content: center;
       align-items: center;
       border: 1px solid $colorShowData;
-      width: 280px;
+      width: 230px;
       height: 50px;
       text-align: center;
 
       @include onTablet {
         width: 200px;
-        flex-grow: 2;
         height: 70px;
       }
 
@@ -160,10 +162,9 @@
       width: 50px;
       height: 50px;
       background-color: $colorShowData;
+      transition: 0.3s;
 
-      &:hover {
-        transform: scale(1.05);
-      }
+      @include hover (background-color, #f14a27);
 
       @include onTablet {
         width: 70px;
