--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -11,7 +11,6 @@
 
   @include onDesktop {
     justify-content: center;
-    // align-items: start;
     margin: -100px 0 0;
   }
 
@@ -19,6 +18,8 @@
     display: block;
     width: 56px;
     height: 60px;
+
+    @include hover (transform, scale(1.05));
 
     @include onTablet {
       height: 72px;
