--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -140,23 +140,26 @@
   &__info-content {
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    gap: 20px;
+    justify-content: space-between;
 
-
+    @include onDesktop {
+      gap: 30px;
+    }
   }
 
   &__info-block {
     display: flex;
     flex-direction: column;
-    width: 130px;
+    width: 100%;
 
     @include onTablet {
-      width: 220px;
+      width: 100%;
       margin-bottom: 64px;
     }
 
     @include onDesktop {
-      width: 170px;
+      width: 100%;
       margin-bottom: 87px;
     }
   }
