--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,63 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  line-height: 45px;
+  font-size: 45px;
+
+  @include onTablet {
+    font-size: 54px;
+    line-height: 64px;
+  }
+
+  @include onDesktop {
+    font-size: 72px;
+    line-height: 86px;
+  }
+}
+
+%h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  line-height: 36px;
+  font-size: 36px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  @include onTablet {
+    font-size: 48px;
+    line-height: 48px;
+  }
+
+  // @include onDesktop {
+  //   font-size: 72px;
+  //   line-height: 86px;
+  // }
+}
+
+%h3 {
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  line-height: 28px;
+  font-size: 28px;
+  // margin-block-start: 0;
+  // margin-block-end: 0;
+  @include onTablet {
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  // @include onDesktop {
+  //   font-size: 72px;
+  //   line-height: 86px;
+  // }
+}
+
+%h4 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+%p {
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
