JS code was added

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,7 +10,7 @@ $button-size: 70px;
 $event-type-color: #687480;
 $green-elements-color: #1a5a4c;
 $red-elements-color: #f14a27;
-$bg-color: #e5e5e5;
+$bg-color: #fff;
 $titles-color: #0f0e08;
 $content-text-color: #4e4e4e;
 $light-arrow-color: #d7dde3;
