--- a/src/styles/blocks/main-block.scss
+++ b/src/styles/blocks/main-block.scss
@@ -20,10 +20,10 @@
   }
 
   &__gallery {
-    margin: 0 $base-spaces-mobile 100px;
+    margin: 0 0 100px $base-spaces-mobile;
 
     @include onTablet {
-      margin: 0 $base-spaces-tablet 92px;
+      margin: 0 0 92px $base-spaces-tablet;
     }
 
     @include onDesctop {
