The delay before script launching was added

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -34,6 +34,8 @@
     display: flex;
     flex-wrap: nowrap;
 
+    transition: transform 0.5s;
+
     @include onDesctop {
       overflow: hidden;
       display: grid;
