Untracked files were added

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,6 +21,8 @@ $grid-second-position: 2;
 $base-spaces-mobile: 6.25vw;
 $base-spaces-tablet: 4.4vw;
 $base-spaces-desctop: 4.4vw;
+$mobile-gallery-image-min-width: 87.5vw;
+$tablet-gallery-image-min-width: 44.4vw;
 $event-title-margin-mobile: 12px;
 $event-title-margin: 16px;
 $event-title-lecture-padding-mobile: 20px;
@@ -28,3 +30,4 @@ $event-title-lecture-padding: 52px;
 $events-image-margin-bottom-desctop: 104px;
 $lecture-block-margin-mobile: 40px;
 $lecture-block-margin-tablet: 4px;
+$transition-duration: 0.5s;
