--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -5,6 +5,7 @@
   column-gap: $base-spaces-mobile;
 
   @include onTablet {
+    width: 100vw - $base-spaces-tablet * 2;
     grid-template-columns: repeat(6, 1fr);
     column-gap: 30px;
   }
