--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -58,7 +58,7 @@
     text-decoration: none;
     color: inherit;
 
-    transition: 0.5s;
+    transition: $transition-duration;
 
     &:first-child {
       padding-top: $menu-items-padding;
