--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,7 +8,7 @@
   color: $content-text-color;
   background-color: $bg-color;
 
-  transition: linear;
+  transition: $transition-duration linear;
 
   scroll-behavior: smooth;
 
@@ -27,7 +27,7 @@
     right: 0;
 
     transform: translateX(-100%);
-    transition: transform 0.5s;
+    transition: transform $transition-duration;
 
     &:target {
       transform: translateX(0);
