--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -5,6 +5,7 @@
   column-gap: $base-spaces-mobile;
 
   @include onTablet {
+    width: 100vw - $base-spaces-tablet * 2;
     grid-template-columns: repeat(6, 1fr);
     column-gap: 30px;
   }
@@ -49,12 +50,13 @@
     min-width: 87.5vw;
     height: 65.6vw;
 
-    transition: 0.5s;
+    transition: $transition-duration;
 
     @include onTablet {
       margin-bottom: 44px;
       grid-column: $grid-first-position / span 6;
       min-width: 92vw;
+      max-width: 100%;
       height: 67.7vw;
       min-height: 520px;
     }
