Gallery images scale was deleted for mobile and tablet

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -114,16 +114,14 @@
     }
 
     &:hover {
-      transform: scale(1.05);
+      @include onDesctop {
+        transform: scale(1.05);
+      }
+
+      @include onLargeScreens {
+        transform: scale(1.05);
+      }
     }
-
-    // &:last-child {
-    //   margin-right: $base-spaces-mobile;
-
-    //   @include onTablet {
-    //     margin-right: $base-spaces-tablet;
-    //   }
-    // }
   }
 
   &__dots {
