Transition was added for gallery images, links in contacts were created

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,7 @@ $bg-color: #fff;
 $titles-color: #0f0e08;
 $content-text-color: #4e4e4e;
 $light-arrow-color: #d7dde3;
+$footer-links-hover-color: #0075ff;
 $menu-items-padding: 12px;
 $desctop-image-height: 100vh;
 $grid-first-position: 1;
