--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -94,6 +94,19 @@
     margin-bottom: 20px;
   }
 
+  &__contacts-link {
+    display: block;
+    margin: 0;
+    // max-width: 100%;
+    text-decoration: none;
+    color: $titles-color;
+    line-height: 1.5em;
+
+    &:hover {
+      color: $footer-links-hover-color;
+    }
+  }
+
   &__to-the-top {
     grid-column: $grid-second-position / span 1;
     justify-self: end;
@@ -184,6 +197,10 @@
       @include onTablet {
         margin-bottom: 120px;
       }
+    }
+
+    &:hover {
+      color: $footer-links-hover-color;
     }
   }
 
