--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -37,7 +37,6 @@
   &__images {
     display: flex;
     flex-wrap: nowrap;
-    
 
     transition: transform $transition-duration;
 
@@ -55,6 +54,8 @@
     max-height: 128vw;
     margin-right: 16px;
     margin-bottom: $base-spaces-mobile;
+
+    transition: transform $transition-duration;
 
     @include onTablet {
       min-width: $tablet-gallery-image-min-width;
