Visited links color was fixed

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -102,6 +102,10 @@
     color: $titles-color;
     line-height: 1.5em;
 
+    &:visited {
+      color: $titles-color;
+    }
+
     &:hover {
       color: $footer-links-hover-color;
     }
@@ -197,6 +201,10 @@
       @include onTablet {
         margin-bottom: 120px;
       }
+    }
+
+    &:visited {
+      color: $titles-color;
     }
 
     &:hover {
