Hover for mobile and tablet footer links was excluded; clear

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -97,7 +97,6 @@
   &__contacts-link {
     display: block;
     margin: 0;
-    // max-width: 100%;
     text-decoration: none;
     color: $titles-color;
     line-height: 1.5em;
@@ -107,7 +106,9 @@
     }
 
     &:hover {
-      color: $footer-links-hover-color;
+      @include onDesctop {
+        color: $footer-links-hover-color;
+      }
     }
   }
 
@@ -208,7 +209,9 @@
     }
 
     &:hover {
-      color: $footer-links-hover-color;
+      @include onDesctop {
+        color: $footer-links-hover-color;
+      }
     }
   }
 
