Hover on footer icons was added

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -11,7 +11,7 @@
     position: absolute;
     top: 32px;
     left: 24px;
-    background-image: url(../images/icon-menu.png);
+    background-image: url(../images/icon-menu.svg);
     width: 18px;
     height: 12px;
 
@@ -30,7 +30,13 @@
     margin-right: 24px;
     width: 12px;
     height: 24px;
-    background-image: url(../images/facebook.png);
+    background-image: url(../images/facebook.svg);
+
+    transition: $transition-duration;
+  
+    &:hover {
+      transform: scale(1.5);
+    }
 
     @include onTablet {
       margin-right: 40px;
@@ -44,6 +50,12 @@
   &--instagram {
     width: 24px;
     height: 24px;
-    background-image: url(../images/instagram.png);
+    background-image: url(../images/instagram.svg);
+
+    transition: $transition-duration;
+
+    &:hover {
+      transform: scale(1.5);
+    }
   }
 }
