--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -14,6 +14,12 @@
     background-image: url(../images/icons/menu.svg);
   }
 
+  &--cross {
+    height: 24px;
+    width: 24px;
+    background-image: url(../images/icons/cross.svg);
+  }
+
   &--facebook {
     height: 24px;
     width: 12px;
