--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -13,8 +13,23 @@
     -webkit-box-shadow: 0 0 0 1000px $secondaryColor inset;
     transition: background-color 5000s ease-in-out 0s;
   }
+  scroll-behavior: smooth;
   &__body {
     margin: 0;
     padding: 0;
   }
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: translateX(-100%);
+    &:target {
+      transform: translate(0);
+    }
+  }
+}
+
+* {
+  transition-duration: 0.3s;
 }
