--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -1,8 +1,5 @@
 .current-events {
   &__title {
-    @extend %ff--Montserrat;
-    font-size: 36px;
-    line-height: 100%;
-    text-align: center;
+    @extend %mb-title;
   }
 }
