--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -4,21 +4,25 @@
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  transition: transform 1s;
-
-  &:hover {
-    transform: scale(1.2);
-  }
+  @include hover(transform, scale(1.2));
+  width: 100%;
+  height: 100%;
 
   &--menu {
-    width: 18px;
-    height: 12px;
     background-image: url(../images/icon/menu-icon.svg);
   }
 
   &--close {
     background-image: url(../images/icon/close.png);
-    width: 18px;
-    height: 18px;
+  }
+
+  &--facebook {
+    background-image: url(../images/icon/Facebook.svg);
+    @include square(24px);
+  }
+
+  &--instagram {
+    background-image: url(../images/icon/Instagram.svg);
+    @include square(24px);
   }
 }
