--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,35 +1,10 @@
 .logo {
-
+  display: flex;
+  
   &__img {
-    width: 55px;
-    height: 61px;
-
+    width: 64px;
+    height: 72px;
     object-fit: contain;
     object-position: center;
-
-    @include Tablet {
-      width: 220px;
-      height: 72px;
-    }
-
-    @include Desktop {
-      width: 170px;
-    }
-    
-    &:hover {
-      animation: rotate 1s;
-    }
-  }
-
-  @keyframes rotate {
-    0% {
-      transform: rotate(0);
-    }
-    50% {
-      transform: rotate(30deg);
-    }
-    100% {
-      transform: rotate(0);
-    }
   }
 }
