--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -33,16 +33,17 @@
 
   &__item {
     padding: 10px 0;
-    // border-right: 3px solid $color-orange;
+    border-right: 3px solid $color-orange;
     margin-bottom: 3px;
 
     @include Tablet {
       margin-bottom: 10px;
+      border-right: 0;
     }
   }
 
   &__link {
-    @extend %ff--Montserrat;
+    @extend %ff--Montserrat; 
     font-size: 24px;
     line-height: 100%;
     transition: border-bottom 1s ease-in, color 1s ease-in;
