--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -15,15 +15,63 @@
   }
 
   &__section {
-    margin-bottom: 70px;
+    margin-bottom: 100px;
 
     @include Tablet {
-      // mb от кнопки
-      margin-bottom: 107px;
+      margin-bottom: 88px;
     }
 
     @include Desktop {
       margin-bottom: 200px;
+    }
+
+    &--header {
+      margin-bottom: 70px;
+
+      @include Tablet {
+        margin-bottom: 88px;
+      }
+  
+      @include Desktop {
+        margin-bottom: 200px;
+      }
+    }
+
+    &--gallery {
+      @include Tablet {
+        margin-bottom: 92px;
+      }
+      @include Desktop {
+        margin-bottom: 200px;
+      }
+    }
+  }
+
+  &__subscribe {
+    margin-bottom: 50px;
+
+    @include Desktop {
+      margin-bottom: 48px;
+    }
+  }
+  
+  &__main {
+    margin-bottom: 80px;
+
+    @include Tablet {
+      margin-bottom: 120px;
+    }
+
+    @include Desktop {
+      margin-bottom: 86px;
+    }
+  }
+
+  &__footer {
+    margin-bottom: 64px;
+
+    @include Tablet {
+      margin-bottom: 36px;
     }
   }
 }
