--- a/src/styles/blocks/top-action.scss
+++ b/src/styles/blocks/top-action.scss
@@ -8,10 +8,20 @@
 
     @include Tablet {
       position: static;
+      width: 220px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transform: translateX(0);
+    }
+    
+    @include Desktop {
+      width: 170px;
     }
   }
 
-  &__icon {
+  &__icon-wrap {
+    @include square(18px);
     position: absolute;
     top: 33px;
 
