--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,15 @@
 @import "./blocks/button.scss";
 @import "./blocks/nav.scss";
 @import "./blocks/current-events.scss";
+@import "./blocks/article.scss";
+@import "./blocks/date.scss";
+@import "./blocks/painting.scss";
+@import "./blocks/preview.scss";
+@import "./blocks/title.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/album.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/details-namu.scss";
+@import "./blocks/reused-block.scss";
+@import "./blocks/footer.scss";
