--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -41,3 +41,15 @@
     width: 57%;
   }
 }
+
+%mb-title {
+  margin-bottom: 40px;
+
+  @include Tablet {
+    margin-bottom: 48px;
+  }
+
+  @include Desktop {
+    margin-bottom: 56px;
+  }
+}
