--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,11 +3,19 @@ $color-black: #0f0e08;
 $color-title: #000;
 $color-btn: #1a5a4c;
 $color-orange: #f24223;
+$color-date-text: #687480;
+
 $h-header-mobile: 300px;
 $h-header-tablet: 384px;
 $h-header-desktop: 655px;
 $padd-top-header: 9px;
 $h-btn: 70px;
+$h-btn-mobile: 50px;
+$h-preview-mobile: 210px;
+$h-preview-tablet: 390px;
+$h-preview-desktop: 550px;
+$tablet-w-size: 768px;
 
+$max-column-mobile: 2;
 $max-column-tablet: 6;
 $max-column-desktop: 12;
