--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -11,4 +11,14 @@
     padding: 0 55px;
     max-width: 1280px;
   }
+
+  @include The_design {
+    padding: 0 85px;
+    max-width: 1600px;
+  }
+
+  @include Large_Screen {
+    padding: 0 100px;
+    max-width: 2100px;
+  }
 }
