--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,7 +6,12 @@
   }
 
   &__content {
+    position: relative;
     @extend %base-top-padd-header;
+
+    @include Tablet {
+      height: $h-header-tablet;
+    }
 
     @include Desktop {
       height: $h-header-desktop;
@@ -52,6 +57,8 @@
 
       transform: rotate(270deg);
       position: absolute;
+      // left = font-size / 2;
+      left: 7px;
       bottom: 0;
     }
 
