--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,18 +1,30 @@
 @mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.5s;
+  transition: #{$_property} 1s;
   &:hover {
     #{$_property}: $_toValue;
   }
 }
 
 @mixin Tablet {
-  @media (min-width:768px) {
+  @media (min-width: $tablet-w-size) {
     @content;
   }
 }
 
 @mixin Desktop {
-  @media (min-width: 1224px) {
+  @media (min-width: 1200px) {
+    @content;
+  }
+}
+
+@mixin The_design {
+  @media (min-width: 1600px) {
+    @content;
+  }
+}
+
+@mixin Large_Screen {
+  @media (min-width: 1920px) {
     @content;
   }
 }
@@ -20,4 +32,10 @@
 @mixin square($size) {
   height: $size;
   width: $size;
+}
+
+@mixin circle($size) {
+  height: $size;
+  width: $size;
+  border-radius: 50%;
 }
