--- a/src/styles/blocks/album.scss
+++ b/src/styles/blocks/album.scss
@@ -9,9 +9,15 @@
     overflow: hidden;
     max-height: 360px;
     width: 100%;
+    transition: transform 1s;
 
     &--max-h {
       max-height: 600px;
+    }
+
+    &:hover {
+      transform: scale(1.1);
+      z-index: 10;
     }
   }
 
