--- a/src/styles/blocks/article.scss
+++ b/src/styles/blocks/article.scss
@@ -48,6 +48,12 @@
     object-fit: cover;
     object-position: center;
     margin-bottom: 16px;
+    transition: transform 1s;
+
+    &:hover {
+      transform: scale(1.1);
+      z-index: 10;
+    }
 
     @include Tablet {
       height: 520px;
