--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -9,6 +9,7 @@
   background-color: #fff;
   height: 100vh;
   @extend %base-top-padd-header;
+  z-index: 100;
 
   &:target {
     transform: translateX(0);
