--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,25 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/_mixins";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/all.scss";
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/container.scss";
+@import "blocks/grid.scss";
+@import "blocks/top-actions.scss";
+@import "blocks/logo.scss";
+@import "blocks/title.scss";
+@import "blocks/content.scss";
+@import "blocks/menu.scss";
+@import "blocks/place.scss";
+@import "blocks/contents.scss";
+@import "blocks/exhibition.scss";
+@import "blocks/lecture.scss";
+@import "blocks/holder.scss";
+@import "blocks/text.scss";
+@import "blocks/slider.scss";
+@import "blocks/paintings.scss";
+@import "blocks/subscription.scss";
+@import "blocks/form.scss";
+@import "blocks/footer.scss";
+@import "blocks/section.scss";
+@import "blocks/scrolltop.scss";
