--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -3,10 +3,13 @@
   height: 410px;
   text-align: center;
   position: relative;
+  overflow: hidden;
+  margin-bottom: 20px;
 
   @include onTablet {
     width: 340px;
     height: 543px;
+    overflow: unset;
   }
 
   @include onDesktop {
