--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,8 +12,8 @@
 @import "blocks/menu.scss";
 @import "blocks/place.scss";
 @import "blocks/contents.scss";
+@import "blocks/basic.scss";
 @import "blocks/exhibition.scss";
-@import "blocks/lecture.scss";
 @import "blocks/holder.scss";
 @import "blocks/text.scss";
 @import "blocks/slider.scss";
