--- a/src/styles/blocks/text.scss
+++ b/src/styles/blocks/text.scss
@@ -1,27 +1,25 @@
 .text {
+  bottom: 60px;
+  height: auto;
+  margin: 0 auto;
   position: relative;
-  margin-bottom: 43px;
-  left: 20px;
-  bottom: 57px;
+
   width: 280px;
-  background-color: white;
+  background-color: #fff;
   box-shadow: 0 2px 0 0 #1a5a4c40;
-  padding-bottom: 20px;
 
   @include onTablet {
     width: 570px;
-    left: 99px;
-    bottom: 82px;
-    padding-bottom: 0;
+    bottom: 80px;
   }
 
   @include onDesktop {
-    left: 375px;
-    margin-bottom: 98px;
-
+    width: 507px;
+    bottom: 105px;
   }
 
   &__name {
+    padding-bottom: 20px;
     font-family: Montserrat, sans-serif;
     font-weight: 400;
     font-size: 28px;
