--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  overflow: hidden;
   &__nav {
     display: flex;
     align-items: center;
@@ -15,13 +16,10 @@
     top: 0;
     right: 0;
     @include onTablet {
-      width: 416px;
-      object-fit: cover;
+      width: 374px;
       height: 384px;
-      right: -42px;
     }
     @include onDesktop {
-      right: 0;
       width: 725px;
       height: 655px;
     }
