--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -12,13 +12,28 @@
     margin-top: 89px;
   }
 
+  &__hover {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+
+    &:hover {
+      background-color: #1a5a4c;
+    }
+
+    @include onDesktop {
+      margin-bottom: 112px;
+      margin-left: 155px;
+    }
+  }
+
   &__tickets {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50px;
     width: 230px;
-    margin-bottom: 20px;
 
     box-sizing: border-box;
     border: 1px solid #1a5a4c;
@@ -32,18 +47,9 @@
     cursor: pointer;
     transition: background-color 0.5s;
 
-    &:hover {
-      background-color: #1a5a4c;
-    }
-
     @include onTablet {
       height: 70px;
       width: 200px;
-    }
-
-    @include onDesktop {
-      margin-bottom: 112px;
-      margin-left: 155px;
     }
   }
 
@@ -51,7 +57,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
+
     width: 50px;
     height: 50px;
 
@@ -67,9 +73,6 @@
       height: 70px;
     }
 
-    @include onDesktop {
-      margin-bottom: 112px;
-    }
   }
 
   &__events {
