--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,15 +1,13 @@
 .slider {
-  width: 280px;
+  width: 100%;
   height: 410px;
   text-align: center;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
   margin-bottom: 20px;
 
   @include onTablet {
-    width: 340px;
     height: 543px;
-    overflow: unset;
   }
 
   @include onDesktop {
