--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,46 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  color: $c-b;
+}
+
+%h2 {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  color: $t-but;
+}
+
+%h3 {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
   font-weight: 400;
+  color: $t-but;
+}
+
+%h4 {
+  font-family: "IBM", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: $c-bgr;
+}
+
+%text {
+  font-family: "IBM", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 150%;
+  color: $t-main;
+}
+
+%bigText {
+  font-family: "IBM", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 150%;
+  color: $c-gb;
 }
