--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$c-b: #000;
+$c-gb: #1a5a4c;
+$c-bgr: #687480;
+$c-w: #fff;
+$c-or: #f14a27;
+$c-g: #e5e6eb;
+$t-but: #0f0e08;
+$t-main: #4e4e4e;
+
+$navSize: 24px;
+$socSize:32px;
