--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,16 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "block/page";
+@import "block/container";
+@import "block/header";
+@import "block/icon";
+@import "block/logo";
+@import "block/menu";
+@import "block/top-actions";
+@import "block/button";
+@import "block/news";
+@import "block/lecture";
+@import "block/galery";
+@import "block/subscribe";
+@import "block/footer";
