--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -74,6 +74,12 @@
     &--bold {
       font-weight: 600;
     }
+    &--button {
+      &:hover,
+      &:focus {
+        color: $c-or;
+      }
+    }
   }
   &__button-card {
     margin-bottom: 40px;
@@ -98,6 +104,19 @@
       background-color: rgba(26, 90, 76, 0.5);
     }
   }
+  &__arrow {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 16px;
+    height: 16px;
+    background-color: $c-gb;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-mask-image: url(../images/icons/arrow.svg);
+    mask-image: url(../images/icons/arrow.svg);
+    transform: translate(-50%, -50%);
+  }
   &__button {
     cursor: pointer;
     position: relative;
@@ -110,19 +129,6 @@
     @include onTablet {
       display: none;
     }
-    &__arrow {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 16px;
-      height: 16px;
-      background-color: $c-gb;
-      background-repeat: no-repeat;
-      background-size: cover;
-      -webkit-mask-image: url(../images/icons/arrow.svg);
-      mask-image: url(../images/icons/arrow.svg);
-      transform: translate(-50%, -50%);
-    }
     &:hover {
       border-color: $c-or;
       background-color: $c-or;
@@ -134,6 +140,10 @@
   &__nav {
     margin-bottom: 20px;
     display: block;
+    &:hover,
+    &:focus {
+      color: $c-or;
+    }
   }
   &__copywrite {
     margin-top: 80px;
@@ -148,6 +158,5 @@
     @include onLaptop {
       margin-top: 87px;
     }
-
   }
 }
