--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -72,6 +72,20 @@
     @include onLaptop {
       display: inline-block;
     }
+    &:hover {
+      color: $c-or;
+    }
+    &:hover .header__subtitle:before {
+      content: "";
+      display: inline-block;
+      vertical-align: middle;
+      width: 100%;
+      height: 1px;
+      background-color: $c-or;
+      position: relative;
+      margin-left: -100%;
+      left: -20px;
+    }
   }
   &__picture {
     position: absolute;
@@ -114,7 +128,7 @@
     }
   }
   &__button {
-    width: 280px;
+    width: 100%;
     @include onTablet {
       width: 270px;
     }
