--- a/src/styles/block/lecture.scss
+++ b/src/styles/block/lecture.scss
@@ -19,13 +19,36 @@
       width: 570px;
       height: 204px;
     }
+    @include onLaptop {
+      padding: 45px 100px 55px;
+      width: 570px;
+      height: 204px;
+    }
   }
   &__img {
     width: 100vw;
     min-height: 210px;
   }
+  &__undertitle {
+    margin-bottom: 16px;
+    width: 100%;
+    @include onTablet {
+      width: 376px;
+    }
+    @include onLaptop {
+      width: 340px;
+    }
+
+  }
   &__card-title {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 100%;
     text-align: center;
     color: $t-but;
+    @include onTablet {
+      font-size: 36px;
+    }
   }
 }
