--- a/src/styles/block/news.scss
+++ b/src/styles/block/news.scss
@@ -48,7 +48,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-
     }
   }
   &__img {
@@ -64,10 +63,12 @@
   }
   &__undertitle {
     margin-bottom: 10px;
+    width: 280px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     @include onTablet {
+      width: 250px;
       margin-bottom: 30px;
     }
     &-text {
