--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
-$c-gray: #eee;
+$c-gray: #e0e0e0;
+$c-white: #fff;
+$c-black: #000;
+$c-green: #1a5a4c;
+$c-dark: #0f0e08;
+$c-ligtDark: #4e4e4e;
+$c-darkGray: #687480;
+$c-red: #f14a27;
