--- a/src/styles/block/galery.scss
+++ b/src/styles/block/galery.scss
@@ -12,12 +12,17 @@
   }
   &__img-container {
     overflow: hidden;
+    cursor: pointer;
+
   }
   &__img {
     object-fit: cover;
     object-position: 0 50%;
-
     max-height: 410px;
+    transition: all 0.4s ease-in-out;
+    &:hover {
+      transform: scale(1.2);
+    }
     @include onTablet {
       max-height: 543px;
     }
