--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "block.actual.scss";
+@import "block.classic.scss";
+@import "block.footer.scss";
+@import "block.gallery.scss";
+@import "block.header.scss";
+@import "block.menu.scss";
 
-body {
-  background: $c-gray;
+* {
+  margin: 0;
+
+  scroll-behavior: smooth;
+  transition: all 0.3s;
+}
+
+.body {
+  background: #fff;
+
+  &--with-menu {
+    overflow: hidden;
+  }
 }
