--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,15 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin on768 {
+  @media (min-width:768px) {
+    @content;
+  }
+}
+
+@mixin on1280 {
+  @media (min-width:768px) {
+    @content;
+  }
+}
