--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,13 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-@import "block.actual.scss";
-@import "block.classic.scss";
-@import "block.footer.scss";
-@import "block.gallery.scss";
-@import "block.header.scss";
-@import "block.menu.scss";
+@import "block/actual.scss";
+@import "block/classic.scss";
+@import "block/footer.scss";
+@import "block/gallery.scss";
+@import "block/header.scss";
+@import "block/menu.scss";
+@import "block/subscribe.scss";
 
 * {
   margin: 0;
