--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,18 @@
 $c-gray: #eee;
+
+$minWidth: 320;
+$maxWidth: 1280;
+$maxWidthContainer: 1170;
+$containerPadding: 110;
+
+$containerWidth: $maxWidthContainer + $containerPadding;
+
+$g-color-light: #fff;
+$g-color-dark: #0f0e08;
+$g-color-gray: #687480;
+$g-color-main-accent: #1a5a4c;
+$g-color-second-accent: #f14a27;
+
+$xl-device-size: 1280;
+$lg-device-size: 1024;
+$md-device-size: 640;
