--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/grid";
+@import "blocks/font";
+@import "blocks/link";
+@import "blocks/button";
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/burger-button";
+@import "blocks/logo";
+@import "blocks/menu";
+@import "blocks/events";
+@import "blocks/event";
+@import "blocks/lecture";
+@import "blocks/gallery";
+@import "blocks/subscribe";
+@import "blocks/footer";
