--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/_vars";
+@import "utils/_mixins";
 
-body {
-  background: $c-gray;
-}
+@import "reset.scss";
+@import "blocks/grid.scss";
+
+@import "blocks/page.scss";
+@import "blocks/container.scss";
+@import "blocks/header.scss";
+@import "blocks/logo.scss";
+@import "blocks/form.scss";
+@import "blocks/footer.scss";
