--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/mixins";
+@import "utils/vars";
+@import "utils/typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/grid.scss";
+@import "blocks/container.scss";
+
+@import "blocks/header.scss";
+@import "blocks/current-events.scss";
+@import "blocks/museum-of-art.scss";
+@import "blocks/gallary.scss";
+@import "blocks/subscription.scss";
+@import "blocks/footer.scss";
