--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,18 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+@mixin hover {
+  transition: transform 0.3s;
   &:hover {
-    #{$_property}: $_toValue;
+    transform: scale(120%);
+  }
+}
+
+@mixin onTablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin onDextop {
+  @media (min-width: 1280px) {
+    @content;
   }
 }
