--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/normalize";
+@import "utils/extends";
+@import "utils/mixins";
+@import "utils/vars";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/container.scss";
+@import "blocks/header.scss";
+@import "blocks/input.scss";
+@import "blocks/logo.scss";
