improved code style

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "utils/mixins";
 @import "utils/vars";
 
+@import "blocks/page.scss";
 @import "blocks/container.scss";
 @import "blocks/header.scss";
 @import "blocks/input.scss";
